Add http-event-listener.connect-http-headers.config-file property
Introduces the `http-event-listener.connect-http-headers.config-file`
property to allow defining custom HTTP headers in an external file
using `key=value` pairs. This supports header names and values
containing commas (`,`) or colons (`:`), which are not supported in
the inline `http-event-listener.connect-http-headers` property.

Only one of `http-event-listener.connect-http-headers` or
`http-event-listener.connect-http-headers.config-file` may be set.
An exception will be raised if both are configured.