@@ -13,16 +13,23 @@
  */
 package io.trino.plugin.httpquery;
 
-import com.google.common.collect.ImmutableMap;
 import io.airlift.configuration.Config;
 import io.airlift.configuration.ConfigDescription;
+import io.airlift.configuration.validation.FileExists;
 import io.airlift.units.Duration;
+import jakarta.validation.constraints.AssertTrue;
 import jakarta.validation.constraints.Min;
 import jakarta.validation.constraints.NotNull;
 
+import java.io.File;
+import java.io.FileInputStream;
+import java.io.IOException;
+import java.io.UncheckedIOException;
 import java.util.EnumSet;
 import java.util.List;
 import java.util.Map;
+import java.util.Optional;
+import java.util.Properties;
 import java.util.stream.Collectors;
 
 public class HttpEventListenerConfig
@@ -34,7 +41,22 @@ public class HttpEventListenerConfig
     private final EnumSet<HttpEventListenerEventType> loggedEvents = EnumSet.noneOf(HttpEventListenerEventType.class);
     private String ingestUri;
     private HttpEventListenerHttpMethod httpMethod = HttpEventListenerHttpMethod.POST;
-    private Map<String, String> httpHeaders = ImmutableMap.of();
+    private Map<String, String> httpHeaders = Map.of();
+    private File httpHeadersConfigFile;
+
+    @Config("http-event-listener.connect-http-headers.config-file")
+    @ConfigDescription("Path to a properties file containing custom HTTP headers, " +
+            "specified as key-value pairs (one per line, e.g., Header-Name=Header Value)")
+    public HttpEventListenerConfig setHttpHeadersConfigFile(File httpHeadersConfigFile)
+    {
+        this.httpHeadersConfigFile = httpHeadersConfigFile;
+        return this;
+    }
+
+    public Optional<@FileExists File> getHttpHeadersConfigFile()
+    {
+        return Optional.ofNullable(httpHeadersConfigFile);
+    }
 
     @ConfigDescription("Will log io.trino.spi.eventlistener.QueryCreatedEvent")
     @Config("http-event-listener.log-created")
@@ -111,6 +133,9 @@ public class HttpEventListenerConfig
 
     public Map<String, String> getHttpHeaders()
     {
+        if (httpHeadersConfigFile != null) {
+            return loadHttpHeadersFromFile(httpHeadersConfigFile);
+        }
         return httpHeaders;
     }
 
@@ -183,5 +208,27 @@ public class HttpEventListenerConfig
     public Duration getMaxDelay()
     {
         return this.maxDelay;
+    }
+
+    @AssertTrue(message = "Exactly one of http-event-listener.connect-http-headers.config-file or " +
+            "http-event-listener.connect-http-headers must be set")
+    public boolean validateHeaderConfigRedundant()
+    {
+        return !(httpHeadersConfigFile != null && !httpHeaders.isEmpty());
+    }
+
+    private Map<String, String> loadHttpHeadersFromFile(File file)
+    {
+        Properties properties = new Properties();
+        try (FileInputStream fis = new FileInputStream(file)) {
+            properties.load(fis);
+        }
+        catch (IOException e) {
+            throw new UncheckedIOException("Failed to read HTTP headers config file: " + file, e);
+        }
+        return properties.entrySet().stream()
+            .collect(Collectors.toUnmodifiableMap(
+                e -> e.getKey().toString(),
+                e -> e.getValue().toString()));
     }
 }
